Webインターフェイスで曲がれるようにした。

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -4,7 +4,7 @@
 <title>test</title>
 </head>
 <body>
-<h1>test</h1>
+<h1>Deus Ex Machine</h1>
 <table>
 <tr><th>Turn</th><td><input id="turnRange" type="range" min="-128" max="127"></input></td></tr>
 <tr><th>Speed</th><td><input id="speedRange" type="range" min="0" max="255"></input></td></tr>
